[gd_scene load_steps=2 format=3 uid="uid://b8lam0n1p2q3r"]

[ext_resource type="Script" path="res://scripts/PlayerName.gd" id="1_1"]

[node name="PlayerName" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Bem-vindo!"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Digite seu nome de jogador"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Seu nome aqui..."
max_length = 20

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirmar"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_confirm_pressed"]
[connection signal="text_submitted" from="VBoxContainer/NameInput" to="." method="_on_name_submitted"]

